tests/paczka1/small_fuzzy/89189757.err
Error in line 8: NP4Sq A604 25,2
Error in line 2: ATg S263 87,0
